--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     <span class="code">&#47;&gt;</span>
                   </p>
             </a>
+            <a class="project-tile" href="https://melissalau17.github.io/weather-app/" target="_blank">
+              <img class="project-img" src="https://live.staticflickr.com/65535/52905738258_ca0a32a695_o.png" />
+              <p class="project-title">
+                  <span class="code">&lt;</span>
+                  Weather App
+                  <span class="code">&#47;&gt;</span>
+                </p>
+          </a>
         </div>
         </section>
         <section id="contact" class="contact-section">
