--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
                   Weather App
                   <span class="code">&#47;&gt;</span>
                 </p>
-          </a>
+            </a>
+            <a class="project-tile" href="https://melissalau17.github.io/todo-app/" target="_blank">
+              <img class="project-img" src="https://live.staticflickr.com/65535/52908005188_ea9076f466_o.png" />
+              <p class="project-title">
+                  <span class="code">&lt;</span>
+                  To-Do App
+                  <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
         </div>
         </section>
         <section id="contact" class="contact-section">
