--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                   <span class="code">&#47;&gt;</span>
                 </p>
             </a>
+            <a class="project-tile" href="https://melissalau17.github.io/tictactoe-game/" target="_blank">
+              <img class="project-img" src="https://live.staticflickr.com/65535/52914776341_64e7efdbf0_o.png" />
+              <p class="project-title">
+                  <span class="code">&lt;</span>
+                  Tic-Tac-Toe Game
+                  <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
         </div>
         </section>
         <section id="contact" class="contact-section">
