--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                   <span class="code">&#47;&gt;</span>
                 </p>
             </a>
+            <a class="project-tile" href="https://melissalau17.github.io/quotes-generator/" target="_blank">
+              <img class="project-img" src="https://live.staticflickr.com/65535/52922840484_b746bf2cf0_o.png" />
+              <p class="project-title">
+                  <span class="code">&lt;</span>
+                  Quotes Generator
+                  <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
         </div>
         </section>
         <section id="contact" class="contact-section">
